--- a/TaskMan/app/src/main/res/layout/task_layout.xml
+++ b/TaskMan/app/src/main/res/layout/task_layout.xml
@@ -9,18 +9,34 @@
     <EditText
         android:id="@+id/task_text_view"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="22sp"
         android:background="@color/material_on_surface_disabled"
-        android:textColor="@android:color/black"
         android:backgroundTint="@android:color/white"
         android:contentDescription="@string/task_description"
-        android:padding="16dp"
+        android:fontFamily="@font/robo5"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="23sp" />
 
+    <Button
+        android:id="@+id/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_button_bg"
+        android:fontFamily="@font/robo3"
 
+        android:text="@string/edit"
+        android:textColor="@android:color/white" />
 
-        android:fontFamily="@font/robo5"/>
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/delete_button_bg"
+        android:fontFamily="@font/robo3"
+        android:text="Delete"
+        android:textColor="@android:color/white" />
 
 
 
