--- a/TaskMan/app/src/main/res/values/colors.xml
+++ b/TaskMan/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="delete_button_bg">#61A431</color>
+    <color name="edit_button_bg">#61A431</color>
+    <color name="delete_button_bg_pressed">#536F3F</color>
+    <color name="edit_button_bg_pressed">#62804C</color>
 </resources>
