--- a/TaskMan/app/src/main/res/layout/activity_main.xml
+++ b/TaskMan/app/src/main/res/layout/activity_main.xml
@@ -45,5 +45,30 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/add_task_layout"
         android:orientation="vertical" />
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/clearAllButton"
+            android:layout_marginBottom="0dp">
+
+            <!-- Your task list layout here -->
+
+        </ScrollView>
+
+        <Button
+            android:id="@+id/clearAllButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/clear_all" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
