--- a/TaskMan/app/src/main/res/layout/activity_main.xml
+++ b/TaskMan/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/teal_200">
+    android:background="@color/cardview_shadow_start_color">
 
     <ImageView
         android:id="@+id/my_image_view"
         android:layout_width="90dp"
         android:layout_height="90sp"
         android:layout_marginBottom="100dp"
-        android:src="@drawable/notepad" />
+        android:src="@drawable/todoicon2"
+
+        android:layout_centerHorizontal="true"/>
 
     <RelativeLayout
         android:id="@+id/add_task_layout"
@@ -20,75 +22,73 @@
         android:layout_marginTop="100sp">
 
         <EditText
-
             android:id="@+id/task_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="244dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="3dp"
             android:background="@color/material_on_surface_disabled"
             android:fontFamily="@font/robo1"
-            android:hint="Enter your text here"
-            android:padding="16dp"
+            android:hint="@string/enter_your_text_here"
+            android:paddingLeft="10dp"
+            android:textColor="#F8F5F5"
+            android:textColorHint="#FDFAFA"
             android:textSize="16sp" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="16dp"
             android:layout_alignParentEnd="true">
 
+            <ImageButton
+                android:id="@+id/add_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:backgroundTint="@color/white"
+                android:src="@android:drawable/ic_input_add"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/task_list_layout"
+                tools:ignore="NotSibling,RelativeOverlap" />
 
-        <Button
-            android:id="@+id/add_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-
-            android:text="@string/add" />
-        <Button
-            android:id="@+id/sort_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sort"
-
-            app:layout_constraintTop_toBottomOf="@+id/task_list_layout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="NotSibling,RelativeOverlap" />
-    </LinearLayout>
-
-
-</RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/task_list_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/add_task_layout"
-        android:orientation="vertical" />
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/clearAllButton"
-            android:layout_marginBottom="0dp">
-
-            <!-- Your task list layout here -->
-
-        </ScrollView>
-
-        <Button
-            android:id="@+id/clearAllButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="@string/clear_all" />
+            <ImageButton
+                android:id="@+id/sort_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:src="@android:drawable/ic_menu_sort_by_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/task_list_layout"
+                tools:ignore="NotSibling,RelativeOverlap" />
+        </LinearLayout>
 
     </RelativeLayout>
 
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/clear_all_button"
+        android:layout_below="@+id/add_task_layout"
+        android:layout_marginBottom="16dp">
+
+        <LinearLayout
+            android:id="@+id/task_list_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/clear_all_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/delete_button_bg"
+        android:text="@string/clear_all" />
 
 </RelativeLayout>
-
