--- a/TaskMan/app/src/main/res/layout/activity_main.xml
+++ b/TaskMan/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,22 @@
             android:orientation="vertical" />
 
     </ScrollView>
-
+    <TextView
+        android:id="@+id/emptytasks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/add_task_layout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="-100dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/empty_task"
+        android:textAlignment="center"
+        tools:visibility="gone" />
     <Button
         android:id="@+id/clear_all_button"
         android:layout_width="wrap_content"
