--- a/TaskMan/app/src/main/res/layout/activity_main.xml
+++ b/TaskMan/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,9 @@
         android:id="@+id/my_image_view"
         android:layout_width="90dp"
         android:layout_height="90sp"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
-        android:src="@drawable/todoicon2"
-
-        android:layout_centerHorizontal="true"/>
+        android:src="@drawable/todoicon2" />
 
     <RelativeLayout
         android:id="@+id/add_task_layout"
@@ -26,7 +25,7 @@
             android:layout_width="244dp"
             android:layout_height="46dp"
             android:layout_marginTop="3dp"
-            android:background="@color/material_on_surface_disabled"
+            android:background="#60000000"
             android:fontFamily="@font/robo1"
             android:hint="@string/enter_your_text_here"
             android:paddingLeft="10dp"
@@ -37,8 +36,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
-            android:layout_alignParentEnd="true">
+            android:layout_alignParentEnd="true"
+            android:paddingRight="16dp">
 
             <ImageButton
                 android:id="@+id/add_button"
@@ -66,21 +65,18 @@
 
     </RelativeLayout>
 
-    <ScrollView
-        android:id="@+id/scroll_view"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tasks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/clear_all_button"
         android:layout_below="@+id/add_task_layout"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/task_layout" />
 
-        <LinearLayout
-            android:id="@+id/task_list_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
 
-    </ScrollView>
     <TextView
         android:id="@+id/emptytasks"
         android:layout_width="match_parent"
@@ -97,13 +93,13 @@
         android:text="@string/empty_task"
         android:textAlignment="center"
         tools:visibility="gone" />
+
     <Button
         android:id="@+id/clear_all_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="74dp"
         android:backgroundTint="@color/delete_button_bg"
         android:text="@string/clear_all" />
-
 </RelativeLayout>
