--- a/TaskMan/app/src/main/res/layout/activity_main.xml
+++ b/TaskMan/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_shadow_start_color">
@@ -65,7 +64,6 @@
 
     </RelativeLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tasks"
         android:layout_width="match_parent"
@@ -102,4 +100,17 @@
         android:layout_marginEnd="74dp"
         android:backgroundTint="@color/delete_button_bg"
         android:text="@string/clear_all" />
+
+    <Button
+        android:id="@+id/view_completed_tasks"
+        android:layout_width="369dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-72dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toEndOf="@id/clear_all_button"
+        android:backgroundTint="@color/delete_button_bg"
+        android:text="@string/view_completed_tasks" />
+
 </RelativeLayout>
