--- a/TaskMan/app/src/main/res/layout/activity_main.xml
+++ b/TaskMan/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:id="@+id/add_task_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100sp">
+        android:layout_marginTop="100sp"
+        android:layout_marginBottom="40dp">
 
         <EditText
             android:id="@+id/task_edit_text"
@@ -63,6 +64,12 @@
         </LinearLayout>
 
     </RelativeLayout>
+    <View
+        android:id="@+id/SplitLine_hor1"
+        android:layout_width="match_parent"
+        android:layout_height= "2dp"
+        android:background="@color/black"
+        android:layout_marginBottom="15dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tasks"
