--- a/TaskMan/app/src/main/res/values/colors.xml
+++ b/TaskMan/app/src/main/res/values/colors.xml
@@ -7,11 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#F19696</color>
 
     <color name="delete_button_bg">#61A431</color>
     <color name="edit_button_bg">#61A431</color>
     <color name="delete_button_bg_pressed">#536F3F</color>
     <color name="edit_button_bg_pressed">#62804C</color>
     <color name="todoGray">#C7C7C7</color>
+    <color name="green">#307828</color>
 
 </resources>
